# moonshine

./: .gitignore  CMakeLists.txt
examples/: code.txt  program.txt
examples/demo/: codegen_calculator.input.txt  lexer_test.input.txt  semcheck_circular.input.txt  semcheck_declarations.input.txt  semcheck_expressions.input.txt  syntax_sample.input.txt
res/: first.txt  follow.txt  grammar.txt  table.json
src/: CMakeLists.txt
src/a1_driver/: CMakeLists.txt  main.cpp
src/a2_driver/: CMakeLists.txt  main.cpp
src/a3_driver/: CMakeLists.txt  main.cpp
src/a4_driver/: CMakeLists.txt  main.cpp
src/driver/: CMakeLists.txt  main.cpp
src/moonshine/: CMakeLists.txt  Error.h  Log.h  Visitor.cpp  Visitor.h
src/moonshine/code/: MemorySizeComputerVisitor.cpp  MemorySizeComputerVisitor.h  StackCodeGeneratorVisitor.cpp  StackCodeGeneratorVisitor.h
src/moonshine/lexer/: Lexer.cpp  Lexer.h  ParseError.h  Token.h  TokenBuilder.cpp  TokenBuilder.h  TokenType.cpp  TokenType.h
src/moonshine/lexer/dfa/: CombinedState.cpp  CombinedState.h  DFA.cpp  DFA.h  DFASimulator.cpp  DFASimulator.h
src/moonshine/lexer/nfa/: Atom.cpp  Atom.h  ICharacter.h  NFA.cpp  NFA.h  NFABuilder.cpp  NFABuilder.h  State.cpp  State.h
src/moonshine/semantic/: DeclarationCheckerVisitor.cpp  DeclarationCheckerVisitor.h  DeclarationVisitor.cpp  DeclarationVisitor.h  InheritanceResolverVisitor.cpp  InheritanceResolverVisitor.h  SemanticError.h  ShadowedSymbolCheckerVisitor.cpp  ShadowedSymbolCheckerVisitor.h  StatementBlockDeclVisitor.cpp  StatementBlockDeclVisitor.h  SymbolTable.cpp  SymbolTable.h  SymbolTableClassDeclLinkerVisitor.cpp  SymbolTableClassDeclLinkerVisitor.h  SymbolTableCreatorVisitor.cpp  SymbolTableCreatorVisitor.h  SymbolTableLinkerVisitor.cpp  SymbolTableLinkerVisitor.h  Type.cpp  Type.h  TypeCheckVisitor.cpp  TypeCheckVisitor.h  TypeCheckerVisitor.cpp  TypeCheckerVisitor.h  Visitor.cpp  Visitor.h
src/moonshine/syntax/: Grammar.cpp  Grammar.h  Node.cpp  Node.h  ParseError.h  Parser.cpp  Parser.h  ast_nodes.h
test/: CMakeLists.txt  test_lexer.cpp  test_semantic.cpp  test_syntax.cpp
